--- a/public/login.html
+++ b/public/login.html
@@ -17,6 +17,8 @@
             <input type="password" id="password" name="password" required>
 
             <button type="submit">Login</button>
+            <br>
+            <a href="http://">Don't have an account?</a>
         </form>
     </div>
 </body>
