edited gallery test page
- mostly done with responsiveness
- needs the background image
- search bar needs to look better on mobile devices

--- a/public/testGallery.html
+++ b/public/testGallery.html
@@ -1,70 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery</title>
-    <link rel="stylesheet" href="./index.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Pet Adoption</title>
+<link rel="stylesheet" href="./test.css">
 </head>
 <body>
-    <!-- <div class="navBar">
-            <a href="" class="left-link"><img src="" alt="logo"></a>
-            <div class="right-link">
-                <a href="">Home</a>
-                <a href="">Adopt</a>
-                <a href="">Sign Up</a>
-            </div>
-    </div> -->
+    <div class="container">
+    <header>
+        <div class="logo">Logo</div>
+        <nav>
+        <a href="#">Home</a>
+        <a href="#">Adopt</a>
+        <button class="sign-in">Sign In</button>
+        </nav>
+    </header>
 
-    <div class="gallery">
-        <div class="items">
-            <img src="./images/Capture.PNG" alt="image of pet">
-            <p style="font-size: 2rem;">Name Here</p>
-            <hr>
-            <p style="font-size: 1rem;">Age here</p>
-            <p style="font-size: 1rem;">Gender here</p>
+    <div class="search-bar">
+        <input type="text" placeholder="Search">
+        <button class="search">Search</button>
+        <button class="filter">Filter</button>
+    </div>
+
+    <div class="pet-grid">
+        <div class="pet-card">
+        <div class="image-container">
+            <img src="./images/Capture.png" alt="Bob">
         </div>
-
-        <div class="items">
-            <img src="./images/Capture.PNG" alt="image of pet">
-            <p style="font-size: 2rem;">Name Here</p>
-            <hr>
-            <p style="font-size: 1rem;">Age here</p>
-            <p style="font-size: 1rem;">Gender here</p>
+        <div class="pet-info">
+            <h3>Bob</h3>
+            <p>10 yrs</p>
+            <p>Male</p>
         </div>
-
-        <div class="items">
-            <img src="./images/Capture.PNG" alt="image of pet">
-            <p style="font-size: 2rem;">Name Here</p>
-            <hr>
-            <p style="font-size: 1rem;">Age here</p>
-            <p style="font-size: 1rem;">Gender here</p>
         </div>
-
-        <div class="items">
-            <img src="./images/Capture.PNG" alt="image of pet">
-            <p style="font-size: 2rem;">Name Here</p>
-            <hr>
-            <p style="font-size: 1rem;">Age here</p>
-            <p style="font-size: 1rem;">Gender here</p>
+        <div class="pet-card">
+        <div class="image-container">
+            <img src="./images/Capture.png" alt="Bob">
         </div>
-
-        <div class="items">
-            <img src="./images/Capture.PNG" alt="image of pet">
-            <p style="font-size: 2rem;">Name Here</p>
-            <hr>
-            <p style="font-size: 1rem;">Age here</p>
-            <p style="font-size: 1rem;">Gender here</p>
+        <div class="pet-info">
+            <h3>Chirp</h3>
+            <p>7 yrs</p>
+            <p>Female</p>
         </div>
-
-        <div class="items">
-            <img src="./images/Capture.PNG" alt="image of pet">
-            <p style="font-size: 2rem;">Name Here</p>
-            <hr>
-            <p style="font-size: 1rem;">Age here</p>
-            <p style="font-size: 1rem;">Gender here</p>
+        </div>
+        <div class="pet-card">
+        <div class="image-container">
+            <img src="./images/Capture.png" alt="Bob">
+        </div>
+        <div class="pet-info">
+            <h3>Fluffy</h3>
+            <p>5 yrs</p>
+            <p>Female</p>
+        </div>
+        </div>
+        <div class="pet-card">
+        <div class="image-container">
+            <img src="./images/Capture.png" alt="Bob">
+        </div>
+        <div class="pet-info">
+            <h3>Tom</h3>
+            <p>12 yrs</p>
+            <p>Male</p>
+        </div>
         </div>
     </div>
-    
+
+    <div class="more">There will be more below</div>
+    </div>
 </body>
 </html>
