started working on pet details page

--- a/public/testGallery.html
+++ b/public/testGallery.html
@@ -23,48 +23,61 @@
             <button class="filter">Filter</button>
         </div>
 
-    <div class="pet-grid">
-        <div class="pet-card">
-        <div class="image-container">
-            <img src="./images/Capture.png" alt="Bob">
+        <div class="pet-grid">
+            <a href="#pet-bob" class="pet-link">
+                <div class="pet-card">
+                    <div class="image-container">
+                        <img src="./images/Capture.png" alt="Bob">
+                    </div>
+                    <div class="pet-info">
+                        <h3>Bob</h3>
+                        <hr>
+                        <p>10 yrs</p>
+                        <p>Male</p>
+                    </div>
+                </div>
+            </a>
+            <a href="#pet-chirp" class="pet-link">
+                <div class="pet-card">
+                    <div class="image-container">
+                        <img src="./images/Capture.png" alt="Chirp">
+                    </div>
+                    <div class="pet-info">
+                        <h3>Chirp</h3>
+                        <hr>
+                        <p>7 yrs</p>
+                        <p>Female</p>
+                    </div>
+                </div>
+            </a>
+            <a href="#pet-fluffy" class="pet-link">
+                <div class="pet-card">
+                    <div class="image-container">
+                        <img src="./images/Capture.png" alt="Fluffy">
+                    </div>
+                    <div class="pet-info">
+                        <h3>Fluffy</h3>
+                        <hr>
+                        <p>5 yrs</p>
+                        <p>Female</p>
+                    </div>
+                </div>
+            </a>
+            <a href="#pet-tom" class="pet-link">
+                <div class="pet-card">
+                    <div class="image-container">
+                        <img src="./images/Capture.png" alt="Tom">
+                    </div>
+                    <div class="pet-info">
+                        <h3>Tom</h3>
+                        <hr>
+                        <p>12 yrs</p>
+                        <p>Male</p>
+                    </div>
+                </div>
+            </a>
         </div>
-        <div class="pet-info">
-            <h3>Bob</h3>
-            <p>10 yrs</p>
-            <p>Male</p>
-        </div>
-        </div>
-        <div class="pet-card">
-        <div class="image-container">
-            <img src="./images/Capture.png" alt="Bob">
-        </div>
-        <div class="pet-info">
-            <h3>Chirp</h3>
-            <p>7 yrs</p>
-            <p>Female</p>
-        </div>
-        </div>
-        <div class="pet-card">
-        <div class="image-container">
-            <img src="./images/Capture.png" alt="Bob">
-        </div>
-        <div class="pet-info">
-            <h3>Fluffy</h3>
-            <p>5 yrs</p>
-            <p>Female</p>
-        </div>
-        </div>
-        <div class="pet-card">
-        <div class="image-container">
-            <img src="./images/Capture.png" alt="Bob">
-        </div>
-        <div class="pet-info">
-            <h3>Tom</h3>
-            <p>12 yrs</p>
-            <p>Male</p>
-        </div>
-        </div>
-    </div>
+        
 
     <div class="more">There will be more below</div>
     </div>
