mostly finished the pet details page

--- a/public/petDetails.html
+++ b/public/petDetails.html
@@ -19,18 +19,22 @@
         <main>
             <div class="pet-info">
                 <h2>Pet Name</h2>
+                <hr>
                 <div class="details">
                     <p><strong>Breed:</strong></p>
                     <p><strong>Age:</strong></p>
                     <p><strong>Description:</strong></p>
                     <p><strong>Behavior:</strong></p>
-                    <p><strong>History:</strong></p>
+                    <div class="history">
+                        <p><strong>History:</strong></p>
+                    </div>
                 </div>
             </div>
             <div class="pet-image">
                 <img src="./images/Capture.PNG" alt="">
             </div>
         </main>
+        <hr>
         <section class="contact">
             <h3>Owner Contacts:</h3>
             <p>Owner email</p>
