touched up some things in the pet details page

--- a/public/petDetails.html
+++ b/public/petDetails.html
@@ -21,13 +21,14 @@
                 <h2>Pet Name</h2>
                 <hr>
                 <div class="details">
-                    <p><strong>Breed:</strong></p>
-                    <p><strong>Age:</strong></p>
-                    <p><strong>Description:</strong></p>
+                    <p><strong>Breed:</strong> Bulldog</p>
+                    <p><strong>Age:</strong> 20 years</p>
+                    <p><strong>Description:</strong> Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                     <p><strong>Behavior:</strong></p>
-                    <div class="history">
-                        <p><strong>History:</strong></p>
-                    </div>
+                </div>
+                <div class="history">
+                    <p><strong>History:</strong></p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto veritatis repellat doloremque placeat veniam fugit, vitae quos ipsam tenetur eaque sed totam ullam neque aliquid architecto non commodi sint amet.</p>
                 </div>
             </div>
             <div class="pet-image">
